Per client request, moved sub-filters for map back to BELOW the map.  As part of this, had to tweak how we're doing spacing on the map to ensure the sub-filter buttons weren't too low (i.e., too much of a gap below the map before the buttons). Verified this change in IE11 and GC.

--- a/EnglishLearners/dev/assets/css/main.css
+++ b/EnglishLearners/dev/assets/css/main.css
@@ -5707,7 +5707,7 @@ button:hover,
     display: inline-block;
     position: relative;
     width: 100%;
-    padding-bottom: 60%; /* aspect ratio */
+    padding-bottom: 45%; /* aspect ratio (60% left too much padding below) */
     vertical-align: top;
     overflow: hidden;
 }
